Geometry Nodes Extrude producing weird normals when Mesh has Custom Normals #106926

Closed
opened 2023-04-14 05:20:22 +02:00 by Robert-Kouts-2 · 3 comments

System Information
Operating system: Windows 10
Graphics card: RTX 3070

Blender Version
Broken: 3.4.1 and 3.5
Worked: 3.3 LTS

Short description of error
Geometry Nodes "Extrude Mesh" node produces weird normals on "side" area when mesh has custom normals. The issue is present no matter how the custom normals were formed, whether with a Data Transfer modifier or by enabling "Custom Split Normals Data". The issue is present regardless of whether "Individual" is enabled on the Extrude node.

Exact steps for others to reproduce the error
0. Use Blender 3.4 or 3.5
1. Create a plane and subdivide it
2. Enable "Auto Smooth" in the geometry settings
3. Enable "Custom Split Normals Data" in the geometry settings
4. Add an Extrude geometry node, and play with the "offset scale", see how the sides of the mesh have extremely weird normals.

See attached Blender file.

@HooglyBoogly requested me to mention him in the description.

**System Information** Operating system: Windows 10 Graphics card: RTX 3070 **Blender Version** Broken: 3.4.1 and 3.5 Worked: 3.3 LTS **Short description of error** Geometry Nodes "Extrude Mesh" node produces weird normals on "side" area when mesh has custom normals. The issue is present no matter how the custom normals were formed, whether with a Data Transfer modifier or by enabling "Custom Split Normals Data". The issue is present regardless of whether "Individual" is enabled on the Extrude node. **Exact steps for others to reproduce the error** 0. Use Blender 3.4 or 3.5 1. Create a plane and subdivide it 2. Enable "Auto Smooth" in the geometry settings 3. Enable "Custom Split Normals Data" in the geometry settings 4. Add an Extrude geometry node, and play with the "offset scale", see how the sides of the mesh have extremely weird normals. See attached Blender file. @HooglyBoogly requested me to mention him in the description.
Robert-Kouts-2 added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-14 05:20:23 +02:00
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2023-04-14 05:28:32 +02:00
Richard Antalik added
Module
Nodes & Physics
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-14 08:12:45 +02:00
Member

This seems to have improved in current master again, but it is still wrong there, too.

Will bisect the two "stages" of this bug

This seems to have improved in current master again, but it is still wrong there, too. Will bisect the two "stages" of this bug
Philipp Oeser added the
Interest
Modeling
label 2023-04-14 11:06:48 +02:00
Member

This first regressed in e412fe1798
Second step was 1af62cb3bf
Then it got a lot better in 16fbadde36
But worse again in current main.

Also note that opening the file and just reverting it might change appearance
So it seems the extrude is sensible to layout of the customdata? Something wrong being uploaded to the GPU (pure speculation)?

CC @HooglyBoogly : will raise prio since this might reveal an underlying issue that is important enough to fix short-term?

This first regressed in e412fe17986ad92963bbc901865c46cf4dda5de1 Second step was 1af62cb3bf46f0cd328ab0840a1363eca938c628 Then it got a lot better in 16fbadde363c8074ec725fa1e1079add096bd741 But worse again in current main. Also note that opening the file and just reverting it might change appearance So it seems the extrude is sensible to layout of the customdata? Something wrong being uploaded to the GPU (pure speculation)? CC @HooglyBoogly : will raise prio since this might reveal an underlying issue that is important enough to fix short-term?
Philipp Oeser added
Module
Modeling
Priority
High
and removed
Module
Nodes & Physics
Priority
Normal
labels 2023-04-14 13:17:45 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-14 16:08:02 +02:00
Member

Thanks for the investigation. Since it seems the error was uninitialized memory from the start, the fact that those commits helped was probably a bit random. I'm not sure about the best way to handle custom normals while extruding anyway, so for now I just removed them.

Thanks for the investigation. Since it seems the error was uninitialized memory from the start, the fact that those commits helped was probably a bit random. I'm not sure about the best way to handle custom normals while extruding anyway, so for now I just removed them.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106926
No description provided.