source/blender/geometry/intern/mesh_split_edges.cc
@@ -28,6 +28,11 @@ static void copy_to_new_verts(MutableSpan<T> data, const Span<int> new_to_old_ve
 
 static void add_new_vertices(Mesh &mesh, const Span<int> new_to_old_verts_map)
 {
+  /* These types aren't supported for interpolation below. */
+  CustomData_free_layers(&mesh.vdata, CD_BWEIGHT, mesh.totvert);
+  CustomData_free_layers(&mesh.vdata, CD_SHAPEKEY, mesh.totvert);
+  CustomData_free_layers(&mesh.vdata, CD_CLOTH_ORCO, mesh.totvert);
+  CustomData_free_layers(&mesh.vdata, CD_MVERT_SKIN, mesh.totvert);
   CustomData_realloc(&mesh.vdata, mesh.totvert, mesh.totvert + new_to_old_verts_map.size());
   mesh.totvert += new_to_old_verts_map.size();
 
