source/blender/nodes/geometry/nodes/node_geo_extrude_mesh.cc
@@ -94,22 +94,39 @@ static void expand_mesh(Mesh &mesh,
                         const int poly_expand,
                         const int loop_expand)
 {
+  /* Remove types that aren't supported for interpolation in this node. */
   if (vert_expand != 0) {
+    CustomData_free_layers(&mesh.vdata, CD_ORCO, mesh.totvert);
+    CustomData_free_layers(&mesh.vdata, CD_BWEIGHT, mesh.totvert);
+    CustomData_free_layers(&mesh.vdata, CD_SHAPEKEY, mesh.totvert);
+    CustomData_free_layers(&mesh.vdata, CD_CLOTH_ORCO, mesh.totvert);
+    CustomData_free_layers(&mesh.vdata, CD_MVERT_SKIN, mesh.totvert);
     const int old_verts_num = mesh.totvert;
     mesh.totvert += vert_expand;
     CustomData_realloc(&mesh.vdata, old_verts_num, mesh.totvert);
   }
   if (edge_expand != 0) {
+    CustomData_free_layers(&mesh.edata, CD_BWEIGHT, mesh.totedge);
+    CustomData_free_layers(&mesh.edata, CD_FREESTYLE_EDGE, mesh.totedge);
     const int old_edges_num = mesh.totedge;
     mesh.totedge += edge_expand;
     CustomData_realloc(&mesh.edata, old_edges_num, mesh.totedge);
   }
   if (poly_expand != 0) {
+    CustomData_free_layers(&mesh.pdata, CD_FACEMAP, mesh.totpoly);
+    CustomData_free_layers(&mesh.pdata, CD_FREESTYLE_FACE, mesh.totpoly);
     const int old_polys_num = mesh.totpoly;
     mesh.totpoly += poly_expand;
     CustomData_realloc(&mesh.pdata, old_polys_num, mesh.totpoly);
   }
   if (loop_expand != 0) {
+    CustomData_free_layers(&mesh.ldata, CD_NORMAL, mesh.totloop);
+    CustomData_free_layers(&mesh.ldata, CD_MDISPS, mesh.totloop);
+    CustomData_free_layers(&mesh.ldata, CD_TANGENT, mesh.totloop);
+    CustomData_free_layers(&mesh.ldata, CD_PAINT_MASK, mesh.totloop);
+    CustomData_free_layers(&mesh.ldata, CD_MLOOPTANGENT, mesh.totloop);
+    CustomData_free_layers(&mesh.ldata, CD_GRID_PAINT_MASK, mesh.totloop);
+    CustomData_free_layers(&mesh.ldata, CD_CUSTOMLOOPNORMAL, mesh.totloop);
     const int old_loops_num = mesh.totloop;
     mesh.totloop += loop_expand;
     CustomData_realloc(&mesh.ldata, old_loops_num, mesh.totloop);
